print styles are given to CDP  to avoid text overlapping with other text

--- a/contrib/myplan/trunk/ks-myplan/myplan-web/src/main/webapp/themes/ksap/stylesheets/print.less
+++ b/contrib/myplan/trunk/ks-myplan/myplan-web/src/main/webapp/themes/ksap/stylesheets/print.less
@@ -69,7 +69,7 @@
   .auditReport .requirement,
   .auditReport .bigsection {
     overflow: visible;
-    padding-bottom: 35px;
+    height: initial !important;
   }
 
   .auditReport .section .heading, .auditReport .section .planHeading{
